--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^1.1.0
+  intl: ^0.19.0
+  logger: ^2.0.1
+  url_launcher: ^6.1.12
+
   cupertino_icons: ^1.0.6
   iconsax: ^0.0.8
 
   get: ^4.6.5
+  get_storage: ^2.1.1
 
 
 
